TopAccountsByBalance method and small fixes
